// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup attached and inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:first-of-type {
  border-radius: 0;
  border-top-left-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.emotion-0>button:first-of-type:after {
  border-radius: 0;
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.emotion-0>button:last-of-type {
  border-radius: 0;
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}

.emotion-0>button:last-of-type:after {
  border-radius: 0;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type) {
  border-radius: 0;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type):after {
  border-radius: 0;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not(template)~:not(template) {
  --space-x-reverse: 0;
  margin-right: calc(1rem * var(--space-x-reverse));
  margin-left: calc(1rem * calc(1 - var(--space-x-reverse)));
}

.emotion-0>:not(template)~:not(template) {
  --space-x-reverse: 0;
  margin-right: calc(-1px * var(--space-x-reverse));
  margin-left: calc(-1px * calc(1 - var(--space-x-reverse)));
}

.emotion-1 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  border-width: 1px;
  border-color: transparent;
  border-style: solid;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.emotion-1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-1:hover {
  --bg-opacity: 1;
  background-color: rgba(244,245,247,var(--bg-opacity));
}

<div
    class="emotion-0"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
  </div>
  ,
</DocumentFragment>
`;

exports[`ButtonGroup attached and not inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:first-of-type {
  border-radius: 0;
  border-top-left-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.emotion-0>button:first-of-type:after {
  border-radius: 0;
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.emotion-0>button:last-of-type {
  border-radius: 0;
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}

.emotion-0>button:last-of-type:after {
  border-radius: 0;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type) {
  border-radius: 0;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type):after {
  border-radius: 0;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not(template)~:not(template) {
  --space-x-reverse: 0;
  margin-right: calc(1rem * var(--space-x-reverse));
  margin-left: calc(1rem * calc(1 - var(--space-x-reverse)));
}

.emotion-0>:not(template)~:not(template) {
  --space-x-reverse: 0;
  margin-right: calc(-1px * var(--space-x-reverse));
  margin-left: calc(-1px * calc(1 - var(--space-x-reverse)));
}

.emotion-1 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  border-width: 1px;
  border-color: transparent;
  border-style: solid;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.emotion-1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-1:hover {
  --bg-opacity: 1;
  background-color: rgba(244,245,247,var(--bg-opacity));
}

<div
    class="emotion-0"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
  </div>
  ,
</DocumentFragment>
`;

exports[`ButtonGroup not attached and inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not(template)~:not(template) {
  --space-x-reverse: 0;
  margin-right: calc(1rem * var(--space-x-reverse));
  margin-left: calc(1rem * calc(1 - var(--space-x-reverse)));
}

.emotion-1 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  border-width: 1px;
  border-color: transparent;
  border-style: solid;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.emotion-1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-1:hover {
  --bg-opacity: 1;
  background-color: rgba(244,245,247,var(--bg-opacity));
}

<div
    class="emotion-0"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
  </div>
  ,
</DocumentFragment>
`;

exports[`ButtonGroup not attached and not inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not(template)~:not(template) {
  --space-y-reverse: 0;
  margin-top: calc(0.5rem * calc(1 - var(--space-y-reverse)));
  margin-bottom: calc(0.5rem * var(--space-y-reverse));
}

.emotion-1 {
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  border-width: 1px;
  border-color: transparent;
  border-style: solid;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.emotion-1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-1:hover {
  --bg-opacity: 1;
  background-color: rgba(244,245,247,var(--bg-opacity));
}

<div
    class="emotion-0"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-1"
      type="button"
    >
      Button
    </button>
  </div>
  ,
</DocumentFragment>
`;
